--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.0",
     "multer": "^1.4.5-lts.1",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer-gridfs-storage": "^5.0.2",
+    "nodemon": "^3.1.4"
   },
   "name": "server",
   "version": "1.0.0",
