--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,9 @@
     "multer-gridfs-storage": "^5.0.2",
     "nodemon": "^3.1.4"
   },
+  "engines": {
+    "node": "20.15.1"
+  },
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
